Fix file-upload text align

--- a/Resources/public/less/bootstrapp/commons.less
+++ b/Resources/public/less/bootstrapp/commons.less
@@ -174,6 +174,7 @@ legend {
     margin-bottom: 9px;
     position: relative;
     .box-sizing(border-box);
+    text-align: left;
 }
 .fileupload .uneditable-input {
     display: inline-block;
